@@ -69,7 +69,7 @@ public class ScriptsEngineManager {
 	
 	private void loadManager(String className) throws Exception {
 		Class<?> reporterClass = LoadersManager.getInstance().getLoader().loadClass(className);
-		engines.add((ScriptEngine)reporterClass.newInstance());
+		engines.add((ScriptEngine)reporterClass.getDeclaredConstructor().newInstance());
 	}
 	
 	/**
